WARNING: '!document', file /builds/worker/checkouts/gecko/editor/libeditor/CSSEditUtils.cpp:562
Categories
(Core :: DOM: Editor, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox102 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
Details
Attachments
(2 files)
WARNING: '!document', file /builds/worker/checkouts/gecko/editor/libeditor/CSSEditUtils.cpp:562
WARNING: '!computedDOMStyle', file /builds/worker/checkouts/gecko/editor/libeditor/CSSEditUtils.cpp:511
WARNING: CSSEditUtils::GetComputedCSSInlinePropertyBase() failed: file /builds/worker/checkouts/gecko/editor/libeditor/CSSEditUtils.cpp:961
WARNING: CSSEditUtils::GetCSSEquivalentToHTMLInlineStyleSetInternal() failed: file /builds/worker/checkouts/gecko/editor/libeditor/CSSEditUtils.cpp:1011
| Assignee | ||
Comment 1•4 years ago
|
||
CSSEditUtils::GetCSSEquivalentToHTMLInlineStyleSetInternal may return error
which is unexpected. And the methods changed by this patch may cause destroying
editor if and only if they treat computed style. Therefore, they should be
non-static members and they should return error to make each caller avoid the
unexpected cases if necessary.
| Assignee | ||
Comment 2•4 years ago
|
||
CSSEditUtils will refer the composed document of the element to compute the
style of it. However, it'll fail if RemoveStyleInside has already removed
the element from the DOM tree. Therefore, RemoveInlinePropertyInternal
should stop handling the element immediately after calling RemoveStyleInside
if the element is removed.
Depends on D145303
Comment 4•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/55a42e3b6193
https://hg.mozilla.org/mozilla-central/rev/d73edeb576a4
Description
•