Bug 1767386 - part 1: Make some `CSSEditUtils` methods using `GetCSSEquivalentToHTMLInlineStyleSetInternal` return error with `Result` r=m_kato

`CSSEditUtils::GetCSSEquivalentToHTMLInlineStyleSetInternal` may return error
which is unexpected.  And the methods changed by this patch may cause destroying
editor if and only if they treat computed style.  Therefore, they should be
non-static members and they should return error to make each caller avoid the
unexpected cases if necessary.

Differential Revision: https://phabricator.services.mozilla.com/D145303